sass/globals.sass
/* 
 Tool to manage your Nove account through NAPI
 Copyright (C) 2019 Nove Group

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as
 published by the Free Software Foundation, either version 3 of the
 License, or (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU Affero General Public License for more details.

 You should have received a copy of the GNU Affero General Public License
 along with this program.  If not, see <https://www.gnu.org/licenses/>. */

@use './brand' as *

.disabled
    pointer-events: none
    opacity: .65

p.error
    background: var(--accent-st)
    color: var(--primary)
    font-weight: 500
    font-size: 14px !important
    padding: 7px 10px
    border-radius: 50px
    margin: 0
    margin-left: 5px
    animation: fade .3s ease-in-out
    position: fixed
    bottom: 25px
    left: 50%
    transform: translateX(-50%)
    z-index: 99999999
    @keyframes fade
        0%
            opacity: 0
        100%
            opacity: 1

*
    user-select: none
    font-smooth: always
    -webkit-font-smoothing: antialiased
    -moz-osx-font-smoothing: grayscale
    text-rendering: optimizeLegibility

img
    pointer-events: none

html
    width: 100%
    height: 100%
    overflow-x: hidden

body
    margin: 0
    padding: 0
    width: 100%
    height: 100%
    min-height: 100vh
    background: linear-gradient(180deg, var(--primary), var(--primary)) #fff no-repeat 50% fixed !important
    color: var(--font-st)
    background-size: cover
    & main
        width: calc(100% - 100px * 2)
        min-height: calc(100vh - 68px)
        margin: 0 auto
        transition-duration: .2s
        @media screen and (max-width: 1430px)
            width: calc(100% - 70px * 2)
        @media screen and (max-width: 1100px)
            width: calc(100% - 40px * 2)
        @media screen and (max-width: 500px)
            width: calc(100% - 20px * 2)

